--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -13,7 +13,7 @@
                 <div class="header__inner">
                     <div class="header__logo">Страница Администратора</div>
                     <nav class="nav">
-                        <a class="nav__link" href="index.html">Главная</a>
+                        <a class="nav__link" href="index.jsp">Главная</a>
                     </nav>
                 </div>
             </div>
