--- a/src/main/webapp/Info.html
+++ b/src/main/webapp/Info.html
@@ -13,7 +13,7 @@
                 <div class="header__inner">
                     <div class="header__logo">Над калькулятором работали</div>
                     <nav class="nav">
-                        <a class="nav__link" href="main.jsp">Главная</a>
+                        <a class="nav__link" onclick="history.back();">Главная</a>
                     </nav>
                 </div>
             </div>
